# Edge-Collider

./: CMakeLists.txt  README.md  main.cpp
ColorFlow/: ColorFlow.cpp  ColorFlow.h
MovingObject/: MovingObject.cpp  MovingObject.h  RainbowRect.cpp  RainbowRect.h  SpriteNode.cpp  SpriteNode.h
MovingObjects/: RainbowRect.h
